--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: weather
+    name: forecast-app
   datasource:
     driverClassName: org.h2.Driver
     url: jdbc:h2:mem:weather
