--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -1,23 +1,18 @@
 spring:
   application:
     name: forecast-app
-  #datasource:
-  #  driverClassName: com.mysql.cj.jdbc.Driver
-  #  url: ${DB_URL:jdbc:mysql://localhost:3306/forecast_archive}
-  #  username: ${DB_USER:forecast_app}
-  #  password: ${DB_PASSWORD:kapsch}
   datasource:
-    driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:forecastapp;DB_CLOSE_DELAY=-1
-    username: forecastapp
-    password: kapsch
+    driverClassName: com.mysql.cj.jdbc.Driver
+    url: ${DB_URL:jdbc:mysql://localhost:3306/forecast-app}
+    username: ${DB_USER:forecast_app}
+    password: ${DB_PASSWORD:kapsch}
   jpa:
     defer-datasource-initialization: true
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.H2Dialect
+        dialect: org.hibernate.dialect.MySQLDialect
   data:
     jpa:
       repositories:
