--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -3,14 +3,13 @@ spring:
     name: forecast-app
   datasource:
     driverClassName: org.h2.Driver
-    url: jdbc:h2:mem:weather
-    username: weatherapp
+    url: jdbc:h2:mem:forecastapp;DB_CLOSE_DELAY=-1
+    username: forecastapp
     password: kapsch
   jpa:
-    show-sql: true
     defer-datasource-initialization: true
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
     properties:
       hibernate:
         dialect: org.hibernate.dialect.H2Dialect
