Add new unit and integration tests

--- a/backend/src/test/resources/application.yml
+++ b/backend/src/test/resources/application.yml
@@ -17,3 +17,9 @@ spring:
     jpa:
       repositories:
         enabled: true
+
+client:
+  forecast-source:
+    url: https://api.open-meteo.com/v1/
+    timeout: 10
+    currentWeather: true
