--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -34,6 +34,10 @@ dependencies {
 
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testImplementation 'io.projectreactor:reactor-test:3.6.8'
+
+	testImplementation 'com.squareup.okhttp3:okhttp:5.0.0-alpha.14'
+	testImplementation 'com.squareup.okhttp3:mockwebserver:5.0.0-alpha.14'
+
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 	testRuntimeOnly 'com.h2database:h2'
 
@@ -77,7 +81,7 @@ jacocoTestCoverageVerification {
 	violationRules {
 		rule {
 			limit {
-				minimum = 0.1
+				minimum = 0.8
 			}
 		}
 	}
