--- a/backend/docker/Dockerfile
+++ b/backend/docker/Dockerfile
@@ -1,12 +1,4 @@
-FROM eclipse-temurin:latest AS build
-ADD . /app
-WORKDIR /app
-RUN ./gradlew clean build
-
-FROM eclipse-temurin:latest AS service
-COPY --from=build /app/build/libs/forecast-app-0.0.1-SNAPSHOT.jar /app/forecast-app-0.0.1-SNAPSHOT.jar
-RUN chmod +x /app/forecast-app-0.0.1-SNAPSHOT.jar
-RUN useradd forecast-app
-USER forecast-app
-EXPOSE 8080
-ENTRYPOINT ["java", "-jar", "/app/forecast-app-0.0.1-SNAPSHOT.jar"]
+FROM tomcat:latest
+ADD ../build/libs/forecast-app-0.0.1-SNAPSHOT.war /usr/local/tomcat/webapps/
+RUN mv /usr/local/tomcat/webapps/forecast-app-0.0.1-SNAPSHOT.war /usr/local/tomcat/webapps/forecast-app#v1.war
+CMD chmod +x /usr/local/tomcat/bin/catalina.sh
