--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,22 @@
 version: '3.8'
 
 services:
-  forecast-app:
-    container_name: forecast-app
+  forecast-app-frontend:
+    container_name: forecast-app-frontend
+    build:
+      context: frontend
+      dockerfile: docker/Dockerfile
+    ports:
+      - 4200:4200
+    links:
+      - forecast-app-backend
+    restart: always
+    command: ["ng", "serve", "--host", "0.0.0.0"]
+    networks:
+      - forecast
+
+  forecast-app-backend:
+    container_name: forecast-app-backend
     build:
       context: backend
       dockerfile: docker/Dockerfile
@@ -19,6 +33,8 @@ services:
       DB_URL: jdbc:mysql://forecast-app-db:3306/forecast_app
       DB_USER: forecast_app
       DB_PASSWORD: kapsch
+    networks:
+      - forecast
 
   forecast-app-db:
     container_name: forecast-app-db
@@ -37,3 +53,9 @@ services:
       test: [ "CMD", "mysqladmin" ,"ping", "-h", "localhost" ]
       timeout: 20s
       retries: 10
+    networks:
+      - forecast
+
+networks:
+  forecast:
+    driver: bridge
